<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- Versioning convention 

v.state.feature.bug-fix
  
VERSION: v
STATE: 0=development. 1=beta-release, 2=production
NEW FEATURE: increase by 1 each time there's a new feature
BUG FIXED: increase by 1 each time a bug has been fixed -->

    <string name="app_name">A Maze In Game</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message"> The A-maze-in-game</string>
    <string name="author">By Ahtsho and Feffi v.0.1.1</string>
    <string name="move_instructions">Tap N:north, S:south, W:west, E:east</string>
    <string name="game_status_instructions">Tap Y to start the game, Tap Q to quit the game</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings_play_button">Play</string>
    <string name="choose_player">Choose player</string> 
    <string name="player_1_name">Joao</string>
	<string name="player_2_name">Nadine</string>
	<string name="player_3_name">Ettorino</string>
	<string name="player_4_name">Aster</string>
	<string name="toolbar_text_life">Life</string>
	<string name="toolbar_text_level">Level</string>
	<string name="alert_game_over">Game Over</string>
	<string name="alert_restart">Restart</string>
	<string name="alert_quit">Quit</string>
</resources>
